# nix-nar-kaitai-spec

./: .clang-format  .gitignore  Makefile  NAR.ksy  README.md  derivation.nix  flake.nix  meson.build  nar_ls.cc
.github/workflows/: build.yml
nix/: json-cpp.nix  kaitai-struct-cpp-stl-runtime.nix
src/: meson.build  nar_ls.cc
src/kaitai/: meson.build
test/: meson.build  test_empty_file.sh  test_hello_world.sh  test_hello_world_executable.sh  test_hello_world_symlink.sh  test_nested_directories.sh  test_nested_directories_executable.sh
